stderr
Hiker.java:6: error: illegal start of expression
        return {1};
               ^
Hiker.java:6: error: not a statement
        return {1};
                ^
Hiker.java:6: error: ';' expected
        return {1};
                 ^
3 errors
